--- a/app.json
+++ b/app.json
@@ -22,8 +22,8 @@
     }
    
   },
-  "website": "https://github.com/louyour/nginx-Manual",
-  "repository": "https://github.com/louyour/nginx-Manual",
+  "website": "https://github.com/trefdg/fourfg",
+  "repository": "https://github.com/trefdg/fourfg",
   "stack": "container",
   "features": [
     "runtime-dyno-metadata"
